--- a/SNACK 1/index.html
+++ b/SNACK 1/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="small"></h1>
     <!-- JS -->
     <script src="js/script.js"></script>
 </body>
